--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -19,3 +19,9 @@ careerLevel=Career Level
 currentProj=Current Project
 add=Add
 delete=Delete
+employeeInfo=Employee Info
+skills=Skills
+skill=Skill
+proficiency=Proficiency
+edit=Edit
+cancel=Cancel
