Initial commit Delete function Employee list table

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -19,3 +19,8 @@ careerLevel=Career Level
 currentProj=Current Project
 add=Add
 delete=Delete
+
+#DeleteDialog
+DeleteDialog.Content.Text=Are you sure you want to delete the selected employees?
+#MSG
+Message.NoDataToBeDeleted = Please select data to be deleted !
