Add and Create Page

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -20,6 +20,31 @@ currentProj=Current Project
 add=Add
 delete=Delete
 
+#CreatePage
+titleCreatePage=Create Employee Record
+employeeID=Employee ID
+firstName=First Name
+lastName=Last Name
+containsAlphabet=First Name should only contain Alphabet
+enterValue=Please enter a value
+mustBe90=Age must not be empty. Maximum must be 90
+dateOfHire=Date of Hire
+currentProject=Current Project
+skills=Skills
+skill=Skill
+proficiency=Proficiency
+#Dialog
+save=Save
+cancel=Cancel
+skillAndProficiency=Skill and Proficiency
+selectSkillAndProficiency=Select Skill and Proficiency
+noSkillToBeDeleted=Select at least 1 skill to be deleted
+needRequired=Some required fields are missing or has wrong values
+checkSkill=Skill is already existing.  Choose Another.
+checkProf=Proficiency Level was not indicated
+checkSkill=Skill was not entered
+employeeExisting=Employee already exists
+
 #DeleteDialog
 DeleteDialog.Content.Text=Are you sure you want to delete the selected employees?
 #MSG
