--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -52,3 +52,6 @@ employeeExisting=Employee already exists
 DeleteDialog.Content.Text=Are you sure you want to delete the selected employees?
 #MSG
 Message.NoDataToBeDeleted = Please select data to be deleted !
+
+#EditPage
+titleEditPage=Edit Employee Record
